2006-08-08  Joe Neeman  <joeneeman@gmail.com>

	* scm/page.scm (make-page): make it friendlier to call (esp. from C++)

	* scm/layout-page-layout.scm (make-page-from-systems): new function
	(optimal-page-breaks): use the new page-breaking calling convention

	* scm/define-context-properties.scm (all-user-translation-properties):
	add revokePageTurns

	* lily/paper-column-engraver.cc (stop_translation_timestep): add
	revokePageTurns  functionality. If there is a special barline within
	the breakable region, break there instead of at the end of the region.

	* lily/paper-book.cc (pages): use the new page-breaking calling convention

2006-08-07  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/lexer.ll, lily/source-file.cc: Add \sourcefileline command

	* scripts/lilypond-book.py: insert \sourcefileline command in
	output, so lilypond error messages refer to the spot in the
	original .lytex / .itely sourcefile.

2006-08-04  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/spacing-loose-columns.cc (set_loose_columns): oops: use
	space to next column for distance to fixed col.

	* VERSION (PACKAGE_NAME): release 2.9.14

	* lily/pitched-trill-engraver.cc (make_trill): do set_parent also
	if no accidental.

	* lily/accidental-engraver.cc (process_acknowledged): don't create
	accidental for trill span event. This fixes spurious accidentals
	on trills.

2006-08-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-grob-properties.scm (all-user-grob-properties):
	Clarify documentation of side-axis and direction. Thanks to Paul
	for the inspiration.

	* lily/bar-line.cc: Add documentation for "||:" also in the
	interface documentation.

2006-08-04  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/spacing-loose-columns.cc (set_loose_columns): bugfix.

	* lily/paper-column.cc (set_system): new function.

	* lily/spacing-engraver.cc (stop_translation_timestep): store
	SpacingSpanner refs in Paper_column.

	* lily/spacing-loose-columns.cc (set_loose_columns): rewrite